
      \item \code{packageDescription()} tries harder to solve
      re-encoding issues, notably seen in some Windows locales.  This
      fixes the \code{citation()} issue in \PR{17291}.

      \item \code{model.matrix(~1, mf)} now gets the row names from
      \code{mf} also when they differ from \code{1:nrow(mf)}, fixing
      \PR{14992} thanks to the suggestion by Sebastian Meyer.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.4.1 patched}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item Setting the \code{LC_ALL} category in \code{Sys.setlocale()}
      invalidates any cached locale-specific day/month names and the
      AM/PM indicator for \code{strptime()} (as setting \code{LC_TIME}
      has since \R 3.1.0).

      \item The version of LAPACK included in the sources has been
      updated to 3.7.1, a bug-fix release.

      \item The default for \code{tools::write_PACKAGES(rds_compress=)}
      has been changed to \code{"xz"} to match the compression used by
      \acronym{CRAN}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{within(List, rm(x1, x2))} works correctly again, also
      when \code{List[["x2"]]} is \code{NULL}.

      \item \code{regexec(pattern, text, *)} now also applies
      \code{as.character(.)} to its first two arguments, as documented.

      \item \code{write.table()} and related functions, \code{writeLines()},
      and perhaps other functions writing text to connections did not signal
      errors when the writes failed, e.g. due to a disk being full.  Errors
      will now be signalled if detected during the write, warnings if detected
      when the connection is closed.  (\PR{17243}) 

      \item \code{rt()} assumed the \code{ncp} parameter was a scalar.  (\PR{17306})
    }
  }
}

\section{\Rlogo CHANGES IN R 3.4.1}{

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The deprecated support for PCRE versions older than 8.20
      has been removed.
    }
  }

  \subsection{BUG FIXES}{